style.css
/* @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Manrope:wght@200..800&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap'); */
@import url('https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Jost:ital,wght@0,100..900;1,100..900&family=Manrope:wght@200..800&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');

:root {
    --primary-color:#000000;
    --secondary-color:rgb(249, 249, 249);

    --bg-color:#c8fffe;
    --cream: #f6f3e9;
    
    --body-copy: 1rem;
    --heading-copy: 4rem;

    --spacing: 2rem;
    --vertical: 8rem;
    --primary-font: 'Funnel Sans', sans-serif;

    font-family: var(--primary-font);
}

h1 {
    color: var(--color);
    font-size: var(--heading-copy);
}

main p {
    max-width: 60ch;
    text-align: center;
    margin-block: calc(var(--spacing)*2);
}

hgroup {
    /* color: var(--secondary-color); */
    /* background-color: var(--primary-color); */
    /* border: var(--primary-color) dashed .15rem; */
    padding-block: 1rem;
    padding-inline: var(--spacing);
    border-radius: 2rem;
}

.nav {
    display: flex;
    gap: var(--spacing);
    list-style: none;
    justify-content: space-between;
    align-items: center;
    padding-inline: 1rem;
}

.nav li:first-child {
    font-size: 3rem;
}

.nav-links {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    gap: 0.5rem;
}

@media (width > 600px){
    .nav-links {
    flex-direction: row;
    gap: var(--spacing);
}

}
.nav-links a {
    border: .1rem solid var(--primary-color);
    border-radius: 2rem;
    padding-block: .1rem;
    padding-inline: .6rem;
}

@media (width > 600px) {
    .nav {
    gap: calc(var(--spacing)*3);}
}

body {
    color: var(--primary-color);
    background-color: var(--secondary-color);
    font-size: var(--body-copy);
    block-size: 100vh;
    display: grid;
    align-items: center;
    
}

main {
    padding-inline:var(--spacing);
    padding-block: var(--vertical);
    display: grid;
    justify-items: center;
}

.project-cards {
    width: 100%;
    object-fit: cover;
    display: block;
}

@media (width > 600px){
    .project-cards {
    height: 20rem;
    }
}

ul {
    padding-block: var(--spacing);
    gap: var(--spacing);
    display: grid;
}

ul li {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}

ul li a {
    display: block;
    text-align: right;
}

@media (width > 600px) {
    ul {
        grid-template-columns: 1fr 1fr;
        gap: calc(var(--spacing)*2.5);
    }
}

.tags {
    font-size: 0.75rem;
    opacity: 0.6;
    display: block;
    text-align: right;
    padding-block: .5rem;
}

footer{
    color: var(--secondary-color);
    background-color: var(--primary-color);
    padding-inline: var(--spacing);
    padding-block: calc(var(--spacing)*2);
    display: grid;
    justify-items: center;
}

